[1.52] remove AI translation, make translation more readable - report.html

--- a/report.html
+++ b/report.html
@@ -2,7 +2,7 @@
 <html lang=ru>
 <meta charset=utf-8>
 
-<title>OpenBSD: Отчёты об ошибках</title>
+<title>OpenBSD: Отчёты о проблемах</title>
 <meta name="description" content="OpenBSD problem report page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
@@ -17,169 +17,169 @@ h3 {
 <h2 id=OpenBSD>
 <a href="index.html">
 <i>Open</i><b>BSD</b></a>
-Отчёты об ошибках
+Отчёты о проблемах
 </h2>
 
 <hr>
 
-<h3>Отчёты о проблемах в выпущенных версиях</h3>
+<h3>Отчёты о проблемах в выпущенных версиях (-release, -stable)</h3>
 
 <p>
 Прежде чем сообщать об ошибках/проблемах в выпущенных версиях, просмотрите
 этот контрольный список:
 
 <ol>
- <li>Во-первых, проверьте <a href="errata.html">наличие исправлений и заметок, касающихся выпуска</a>.
- <li>Затем выясните, есть ли более новая версия.
- <li>Наконец, проверьте наличие <a href="https://www.openbsd.org/plus.html">изменений между версиями OpenBSD</a>.
+ <li>Во-первых, проверьте есть ли
+    <a href="errata.html">исправления или какая-то информация, касающаяся релиза</a>.
+ <li>Затем выясните, есть ли более новая версия OpenBSD.
+ <li>Наконец, просмотрите
+    <a href="https://www.openbsd.org/plus.html">изменения между версиями OpenBSD</a>.
 </ol>
 
 <p>
-Если ничто не похоже на решение вашей проблемы, то пожалуйста, ознакомьтесь с <a href="https://man.openbsd.org/sendbug">sendbug(1)</a> перед отправкой сообщения об ошибке.
+Если из всего найденного ничто не относится к вашей проблеме, то, пожалуйста,
+ознакомьтесь с документацией о <a href="https://man.openbsd.org/sendbug">sendbug(1)</a>
+прежде чем отправить отчет.
 
-<h3>Отчёты о проблемах в текущей версии</h3>
+<h3>Отчёты о проблемах в -current</h3>
 
 <p>
-Если ваша проблема связана с исходным деревом -current, а не -release или
--stable,
+Если вы нашли проблему в -current, а не в -release или -stable, то
 
 <ol>
- <li>Проверьте проблему, по крайней мере, дважды, с обновлением исходного кода несколько дней.
- <li>Не сообщайте о проблемах компиляции исходного дерева, пока они есть. Почти
-     всегда это ваша ошибка, или над ними работают, когда вы с ними сталкиваетесь.
-	 Люди, работающие над проектом, делают
-	 <a href="faq/faq5.html">make build</a>, по крайней мере, один раз в день,
-	 и обычно несколько раз в день с разными архитектурами.
- <li>Remember that the <a href="anoncvs.html">AnonCVS</a> servers are
-     updated a few hours behind the actual working source tree.
- <li>Check for <a href="https://www.openbsd.org/plus.html">changes made between OpenBSD versions</a>
-     to see if the problem has been addressed.
- <li>Much care is made in creating snapshots.
-     Sometimes mistakes are made, and our apologies are extended.
-     Reading or writing to the mailing lists is more appropriate than sending
-     in a bug report.
+ <li>Постарайтесь воспроизвести проблему по крайней мере дважды. При этом не сразу же
+     раз за разом, но с периодичностью в несколько дней, при этом обноляясь (загружайте
+     в течение этогого времени новый код из репозитория).
+ <li>Не сообщайте о проблемах связанных с компиляцией исходников.
+     Почти всегда это либо ваша ошибка, либо о ней уже известно, и над ее исправлением
+     уже работают. Люди, работающие над кодом проекта, запускают
+     <a href="faq/faq5.html">make build</a> по крайней мере раз в день, и как правило по
+     несколько раз в день на разных архитектурах.
+ <li>Помните, что синхронизация <a href="anoncvs.html">AnonCVS</a> серверов отстает на
+     несколько часов от сервера с исходниками, которыми пользуются разработчики.
+ <li>Проверьте <a href="https://www.openbsd.org/plus.html">изменения, внесенные уже после
+     официального релиза</a>, чтобы убедиться, что проблема была устранена.
+ <li>Большое внимание уделяется созданию снапшотов.
+     Иногда происходят ошибки, и мы опаздываем с извинениями. Чтение или отправка письма
+     в рассылку будет более разумным, чем отправка в отчете об ошибке.
 </ol>
 
-<h3>Как создать отчет о проблеме</h3>
+<h3>Как создать хороший отчет о проблеме/ошибке</h3>
 
 <p>
 <strong>Всегда предоставляйте как можно больше информации</strong>.
-Попробуйте точно определить проблему. Дайте четкие инструкции о том, как
-воспроизвести проблему. Постарайтесь описать её с максимально возможной
-точностью и не вводящей в заблуждение терминологией, особенно если её нелегко
-воспроизвести.
-Описывать проблемы словами «это дает сбой» или «я получаю странные проблемы с
-прерываниями на этом одном из построенных мной блоков» бесполезно.
-Общайтесь с другими (в списках рассылки или на любом другом форуме, где
-собираются знающие пользователи), чтобы подтвердить, что проблема является
-новой и желательно повторяемой.
-Пожалуйста, постарайтесь убедиться, что это не локальная проблема, созданная с
-помощью сломанного или неподдерживаемого оборудования или с помощью
+Попробуйте точно определить проблему. Дайте четкие пошаговые инструкции о том, как
+можно воспроизвести проблему. Постарайтесь описать её с максимально возможной точностью
+и не вводящей в заблуждение терминологией, особенно если ошибку нелегко воспроизвести.
+Описывать проблемы словами "it crashes" («это ломается») или "I get strange
+interrupt issues on this one box that I built" («я получаю странные проблемы с
+прерываниями на этом одной из собранных мной машин») бессмысленно.
+Пообщайтесь с другими пользователями (в списках рассылки или на любом другом форуме,
+где собираются опытные люди) и постарайтесь получить подтверждение, что проблема
+является новой и желательно воспроизводимой/повторяемой.
+Пожалуйста, убедитесь, что это не локальная проблема, возникающая по причине
+сломанного или неподдерживаемого оборудования или из-за использования
 неподдерживаемых параметров сборки или программного обеспечения.
 
 <p>
-Пожалуйста, не начинайте исправлять проблемы, которые требуют значительных
-усилий, пока вы не будете уверены, что понимаете их, особенно во время наших
-периодов выпуска, когда мы не должны изменять основные разделы кода.
-Если вы собираетесь писать значительные объемы кода, укажите его в списках
-рассылки, чтобы убедиться, что никто другой уже не работает над этой проблемой
-(для исключения дублирования работы).
+Пожалуйста, не начинайте работать над исправлением проблем, которые требуют
+значительных временных затрат и усилий, если вы не уверены, что понимаете их.
+Особенно это касается кода, используемого в уже вышедьших релизах, где мы не
+должны изменять основные части кода.
+Если вы собираетесь работать над объемной частью кода, сообщите об этом нам в
+рассылке, чтобы все знали о ваших планах, и чтобы быть увененным, что никто
+другой уже не работает над этой же проблемой (чтобы исключить дублирования работы).
 
 <p>
-Следующие элементы должны содержаться в каждом отчете об ошибке:
+Следующая информация должна содержаться в каждом отчете:
 
 <ol>
- <li>Точная последовательность шагов при запуске необходима для воспроизведения проблемы.
-	 Это должно быть автономным; недостаточно отправить пустую команду без
-	 аргументов и других данных, которые вы ей предоставили.
-	 Если ошибка требует определенной последовательности событий, перечислите
-	 их.
-	 Вам рекомендуется минимизировать размер вашего примера, но это не
-	 является абсолютно необходимым.
-	 Если ошибка воспроизводима, мы найдем её в любом случае.
+ <li>Точная последовательность шагов, необходимая для воспроизведения проблемы.
+     Информация должна быть самодостаточной; недостаточно отправить нам имя команды
+     без аргументов и параметров, которые вы ей передали.
+     Если ошибка требует определенной последовательности событий, перечислите их.
+     Рекомендуется минимизировать размер вашего примера, но это лишь рекомендация.
+     Если ошибка воспроизводится, мы найдем её в любом случае.
 <p>
- <li>Вывод, который вы получили.
+ <li>Вывод от команды, который вы получили.
      Пожалуйста, не говорите, что это «не сработало» или «не удалось».
-	 Если есть сообщение об ошибке, покажите его, даже если вы его не
-	 понимаете.
-	 Если OpenBSD паникует с определенной ошибкой, скажите, какая.
-	 Если ничего не происходит, так и скажите.
-	 Даже если результатом вашего теста является сбой программы или он
-	 очевиден, в нашем тестировании это может не произойти.
-	 Проще всего скопировать вывод с терминала, если это возможно.
+     Если вы получили сообщение об ошибке, покажите его нам, даже если вы его не
+     понимаете.
+     Если ядро OpenBSD выбрасывает kernel panic, и вы видете ошибку, скажите нам
+     об этом. Если ничего не происходит, скажите, что ничего не происходит.
+     Даже если результатом описанных вами шагов является сбой программы или по-вашему
+     мнению он очевиден, у нас может не получиться воспроизвести ошибку.
+     Проще всего скопировать вывод с терминала, если это возможно.
 <p>
-	 Примечание. В случае фатальных ошибок предоставленное сообщение об ошибке
-	 может содержать не всю доступную информацию.
-	 В этом случае также просмотрите выходные данные в файлах системного
-	 журнала, например, хранящиеся в <code>/var/log</code>.
-	 Кроме того, если вы имеете дело с приложением, которое имеет свои
-	 собственные файлы журналов, например httpd, проверьте наличие ошибок, где
-	 оно хранит свои журналы.
+     Примечание. В случае фатальных ошибок предоставленное сообщение об ошибке может
+     содержать не всю доступную информацию. В этом случае просмотрите выходные данные
+     в файлах системного журнала, например, хранящиеся в <code>/var/log</code>.
+     Кроме того, если вы имеете дело с приложением, которое имеет свои собственные
+     log-файлы, например httpd, проверьте наличие ошибок и там.
 <p>
  <li>Вывод ядра OpenBSD.
-	 Вы можете получить его с помощью команды dmesg, но возможно, что ваш
-	 вывод dmesg не содержит всей информации, которая содержится в
-	 <code>/var/run/dmesg.boot</code>.
-	 Если это так, включите информацию от обоих.
-	 <strong>Пожалуйста, включите это во все сообщения об ошибках.</strong>
+     Вы можете его увидеть при помощи команды dmesg, но возможно, что ваш вывод
+     dmesg не будет содержать всей информации, которая содержится в
+     <code>/var/run/dmesg.boot</code>.
+     Если это так, покажите информацию оттуда и оттуда.
+     <strong>Пожалуйста, всегда предоставляйте нам эту информацию при отправке
+     отчетов.</strong>
 <p>
- <li>Если вы используете стороннее программное обеспечение, которое связано с
-     вашей ошибкой, скажите, в том числе и версию.
-	 Если вы говорите о снапшоте, упомяните об этом, включая дату и время его
-	 создания.
+ <li>Если вы используете программное обеспечение, установленное из вне (third party
+     software), которое так или иначе может быть связано с вашей ошибкой, скажите
+     нам об этом, в том числе и её версию.
+     Если речь идет о снапшоте, не забудьте сказать нам об этом. Важным тут является
+     дата и время его создания.
 <p>
- <li>Трейс от паники ядра.
-     Если ваше ядро запаниковало и вы получили приглашение
-	 <a href="https://man.openbsd.org/ddb">ddb(4)</a>, то пожалуйста,
-	 предоставьте сообщение о панике, а также вывод команд <kbd>trace</kbd> и
-	 <kbd>ps</kbd> в вашем отчете об ошибках, как это было рекомендовано.
-	 Если машина зависает, попробуйте включить <kbd>sysctl ddb.console =
-	 1</kbd> до зависания и войти в DDB с помощью Ctl+Alt+Esc на клавиатуре
-	 (вы должны быть не в X сессии) или отправить BREAK при использовании
-	 последовательной консоли.
-	 Если по какой-либо причине сообщение о панике не отображается, вы можете
-	 получить его снова с помощью команды <kbd>show panic</kbd>.
-	 <strong>Это важно, когда это возможно. Отчеты о панике без сообщения о
-	 панике, трассировки и вывода ps бесполезны.</strong>.
-	 Также может быть интересным вывод <kbd>show registers</kbd>.  Вам может
-	 потребоваться перезагрузка с <kbd>boot dump</kbd>, чтобы образ ядра мог
-	 быть сохранен с помощью
-	 <a href="https://man.openbsd.org/savecore">savecore(8)</a> для дальнейшей
-	 отладки, как описано на справочной странице
-	 <a href="https://man.openbsd.org/crash">crash(8)</a>.
+ <li>Traceback полученный в результате ошибки в ядре.
+     Если в вашем ядре произошла ошибка, и вы получили приглашение
+     <a href="https://man.openbsd.org/ddb">ddb(4)</a>, то пожалуйста предоставьте
+     panic message, а также вывод команд <kbd>trace</kbd> и <kbd>ps</kbd> в вашем
+     отчете об ошибках.
+     Если машина зависает, попробуйте сделать <kbd>sysctl ddb.console = 1</kbd>
+     до зависания и войти в DDB при помощи нажатия Ctl+Alt+Esc на клавиатуре
+     (вы НЕ должны быть в графическом окружении) или отправить BREAK при использовании
+     последовательной консоли (serial console).
+     Если по какой-либо причине panic message не отображается, вы можете увидеть
+     его при помощи команды <kbd>show panic</kbd>.
+     <strong>Это важно, если это возможно. Отчеты о kernel panic без panic message,
+     traceback и вывода комадны ps бессмысленны.</strong>.
+     Также может быть интересным вывод <kbd>show registers</kbd>.
+     Вам может потребоваться перезагрузка при помощи <kbd>boot dump</kbd>, чтобы
+     образ ядра мог быть сохранен при помощи
+     <a href="https://man.openbsd.org/savecore">savecore(8)</a> для последующей
+     отладки, как описано на справочной странице
+     <a href="https://man.openbsd.org/crash">crash(8)</a>.
 <p>
-   <li>Если вы сообщаете о проблеме с системой X Window для архитектуры, в
-       которой используется сервер X.Org, то включите вывод полного файла
-       <code>/var/log/Xorg.0.log</code> в ваш отчет в дополнение к выводу
-       <code>dmesg.boot</code>.
+ <li>Если вы сообщаете о проблеме в X Window System для архитектуры, которая
+     использует X.Org, то предоставьте нам содержание файлов
+     <code>/var/log/Xorg.0.log</code> и <code>dmesg.boot</code>.
 </ol>
 
 <p>
-Не бойтесь, если ваш отчет об ошибке станет довольно длинным.
-Это факт жизни.
-Лучше сообщать обо всём сразу, чем нам выдавливать факты из вас.
-С другой стороны, если ваши входные файлы огромны, то сначала стоит спросить,
-заинтересован ли кто-нибудь в этом.
+Не переживайте, если ваш отчет об ошибке получится довольно большим.
+Такова жизнь. Лучше сообщать обо всём сразу, чем нам потом вытягивать все
+необходимое из вас. С другой стороны, если ваши log-файлы огромны, то возможно
+стоит спросить, заинтересован ли в них кто-нибудь.
 
 <h3 id="bugtypes">Отправка отчета об ошибке</h3>
 
 <p>
-Если возможно, используйте команду
-<a href="https://man.openbsd.org/sendbug">sendbug(1)</a>, чтобы помочь
-сгенерировать ваш отчет об ошибке. Он будет автоматически включать некоторую
-полезную информацию о вашем оборудовании, которая поможет диагностировать
-многие проблемы. Этот инструмент требует, чтобы ваша система могла правильно
-отправлять электронную почту. Если вы не можете использовать sendbug на
-работающем компьютере с OpenBSD, отправьте отчет об ошибке на
-<a href="mailto:bugs@openbsd.org">bugs@openbsd.org</a>.
+Если это возможно, используйте команду
+<a href="https://man.openbsd.org/sendbug">sendbug(1)</a> для создания отчета.
+Он автоматически добавит в отчет некоторую полезную информацию о вашем оборудовании,
+которая поможет диагностировать многие проблемы. Для использования этого инструмента
+требуется, чтобы ваша система могла правильно отправлять email.
+Если вы не можете использовать sendbug на работающем компьютере с OpenBSD, создайте
+отчет вручную и отправьте его на <a href="mailto:bugs@openbsd.org">bugs@openbsd.org</a>.
 
 <p>
-Возможно, то, что вы отправляете - это запрос дополнительной функциональности,
-а не ошибка. Новая функциональность принимается, особенно с кодом, который
-реализует предложенную вами новую функциональность.
+Если вы отравляете не отчет об ошибке, а спрашиваете о новых возможностях системы,
+помните, что на подобные запросы смотрят намного лояльнее, если вы отправляете и код,
+который реализует предложенные вами новые возможности.
 
 <p>
-Для отладки некоторых проблем у нас должно быть оборудование, которое имеет
-проблему.
-Пожалуйста, помните, что ресурсы проекта OpenBSD ограничены.
-Вы <a href="https://www.openbsd.org/want.html">пожертвовать некоторое оборудование</a>.
+Для отладки некоторых специфичных проблем у нас должно быть оборудование, на котором
+мы могли бы эту проблему воспроизвести.
+Пожалуйста, помните, что ресурсы проекта OpenBSD ограничены. Вы можете
+<a href="https://www.openbsd.org/want.html">пожертвовать некоторое оборудование</a>.
