--- a/openssh/openbsd.html
+++ b/openssh/openbsd.html
@@ -37,6 +37,34 @@ h3 {
 
 <ul>
 
+<li><h3>OpenSSH 8.2: 14 февраля 2020</h3>
+
+<p>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.2.tar.gz">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-8.2.tar.gz</a>
+
+<p>
+Если вы устанавливаете OpenSSH 8.2 на OpenBSD 6.6 или 6.5,
+вам понадобится этот патч:<br>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd66_8.2.patch">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openbsd66_8.2.patch</a>.
+
+<pre>
+# cd /usr/src/usr.bin
+# tar zxvf .../openssh-8.2.tar.gz
+# patch -p1 &lt; /path/to/openbsd66_8.2.patch # if on OpenBSD 6.6 or 6.5
+# cd ssh
+# make obj
+# make cleandir
+# make depend
+# make
+# make install
+# cp ssh_config sshd_config /etc/ssh
+</pre>
+
+<p>
+и перезагрузите sshd.
+
 <li><h3>OpenSSH 8.1: 8 октября 2019</h3>
 
 <p>
