[1.54] fix typo(s) - faq/ports/ports.html

--- a/faq/ports/ports.html
+++ b/faq/ports/ports.html
@@ -377,9 +377,9 @@ rsnapshot-1.4.2: ok
 
 <p>
 Как вы видете, много делается автоматически. Система портов загружает, распаковывает
-и накладывает патчи на исходники, настраивает и собирает (компилируеть) их,
+и накладывает патчи на исходники, настраивает и собирает (компилирует) их,
 устанавливает файлы в fake каталог, создает пакет (или даже список пакетов) и
-устанавливать этот пакет в вашу систему (обычно в <code>/usr/local/</code>).
+устанавливает этот пакет в вашу систему (обычно в <code>/usr/local/</code>).
 И все это проделывается рекурсивно <b>для всех зависимостей порта</b>.
 
 Обратите внимание на строки
