[1.168] sync - mail.html

--- a/mail.html
+++ b/mail.html
@@ -239,7 +239,7 @@ LibreSSL.
 <dt><b>libressl-security@openbsd.org</b>
 <dd>Сообщения об уязвимостях в LibreSSL.
 <p>
-<dt><b>security@opensmtpd.org</b>
+<dt><b>opensmtpd-security@openbsd.org</b>
 <dd>Сообщения об уязвимостях в OpenSMTPD.
 </dl>
 
