[1.23] sync - opensmtpd/security.html

--- a/opensmtpd/security.html
+++ b/opensmtpd/security.html
@@ -26,7 +26,7 @@ OpenSMTPD разрабатывается с такой же строгостью
 которым славится сама OpenBSD. Если вы хотите сообщить о проблеме
 безопасности в OpenSMTPD, пожалуйста отправьте письмо в специальную для
 этого рассылку разработчиков
-&lt;<a href="mailto:security@opensmtpd.org">security@opensmtpd.org</a>&gt;.
+&lt;<a href="mailto:opensmtpd-security@openbsd.org">opensmtpd-security@openbsd.org</a>&gt;.
 
 <p>
 Ознакомтесь с материалом по теме
