[1.13] sync - opensmtpd/list.html

--- a/opensmtpd/list.html
+++ b/opensmtpd/list.html
@@ -18,7 +18,7 @@
   <h2>Закрытые рассылки для разработчиков</h2>
 <p>
   О проблемах безопасности Вы можете сообщить в закрытую рассылку (private list)
-  <a href="mailto:security@opensmtpd.org">security@opensmtpd.org</a>.
+  <a href="mailto:opensmtpd-security@openbsd.org">opensmtpd-security@openbsd.org</a>.
   Ваше письмо получат только разработчики OpenSMTPD.
   Эта рассылка не подходит для общих вопросов.
 <p>
